--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -3,4 +3,6 @@ tox==3.14.1
 cookiecutter>=1.4.0
 pytest-cookies==0.4.0
 alabaster==0.7.12
-watchdog==0.9.0
+watchdog
+scons
+git+ssh://git@github.com/mberz/nbflow.git@b3b3729bf81d2ede6319ede5c118cdd52571dc8c#egg=nbflow
