--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -5,4 +5,4 @@ pytest-cookies==0.4.0
 alabaster==0.7.12
 watchdog
 scons
-git+ssh://git@github.com/mberz/nbflow.git@b3b3729bf81d2ede6319ede5c118cdd52571dc8c#egg=nbflow
+git+https://github.com/mberz/nbflow.git@b3b3729bf81d2ede6319ede5c118cdd52571dc8c#egg=nbflow
