--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
+sudo: required
 language: python
 python:
   - 3.8
   - 3.7
   - 3.6
   - 3.5
+
+before_install:
+    - sudo apt-get -qq update && sudo apt-get install -y --no-install-recommends texlive
 
 install: pip install -U tox-travis
 
