--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py35, py36, py37, py38
+envlist = py36, py37, py38
 skipsdist = true
 
 [travis]
@@ -7,7 +7,6 @@ python =
     3.8: py38
     3.7: py37
     3.6: py36
-    3.5: py35
 
 [testenv]
 setenv =
