--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
   - 3.6
 
 before_install:
-    - sudo apt-get -qq update && sudo apt-get install -y --no-install-recommends texlive
+    - sudo apt-get -qq update && sudo apt-get install -y --no-install-recommends texlive-latex-extra
 
 install: pip install -U tox-travis
 
